--- a/dighl/style/correspondences.css
+++ b/dighl/style/correspondences.css
@@ -16,11 +16,14 @@ h3 {margin:5px;}
 #correspondence_data table {border-collapse:separate;border-spacing:1px;}
 #correspondence_data thead {border-collapse:separate;border-spacing:1px;}
 #correspondence_data thead > tr{}
-#correspondence_data thead > tr > th {border-radius:2px;border: 2px solid gray;font-weight:bold;}
-#correspondence_data tbody > tr > td {border-radius:2px;border: 2px solid gray;}
+#correspondence_data thead > tr > th {border-radius:2px;border: 2px solid black;font-weight:bold;}
+#correspondence_data tbody > tr > td {border-radius:2px;border: 2px solid black;}
 #correspondence_data tbody > tr {}
 
-
+#cognates_data table {border-collapse:separate;border-spacing:1px;width:auto;}
+#cognates_data thead {border-collapse:separate;border-spacing:1px;}
+#cognates_data thead > tr > th {text-align:center;border-radius:5px;background-color:lightgray;border-radius:2px;border: 2px solid black;font-weight:bold;}
+#cognates_data tbody > tr > td {border: 2px solid black;font-size:16px;color:black;}
 #correspondences {float: left; display: inline; margin:5px;}
 
 #correspondence_data {position:relative;overflow:hidden;border: 2px solid black; border-radius:5px; padding:5px;}
@@ -28,13 +31,9 @@ h3 {margin:5px;}
 
 /* style for cognates table */
 #cognates {float:left; margin:5px; display:inline;}
-#cognates_table {border-collapse:separate;border-spacing:2px;}
-#cognates_table th {vertical-align: top; border: 2px solid black;}
-#cognates_table td {vertical-align: top; border: 2px solid lightgray;}
 
 #cognates_data {border: 2px solid black;border-radius: 5px;padding:5px;position:relative;overflow:auto;}
-th.cognates_table_header {padding:5px;cursor:default;text-align:center;border:2px solid black; border-radius: 5px; background-color:lightgray;}
-th.cognates_table_header > span.glyphicon {cursor:pointer;}
+.cognates_table_header {padding:5px;cursor:default;text-align:center;border:2px solid black; background-color:white;font-weight:bold!important;}
 #cognates_header {text-align:left; margin-bottom:5px;padding:5px;border: 2px solid black; border-radius:5px; background-color: lightgray;}
 
 
@@ -68,7 +67,7 @@ th.cognates_table_header > span.glyphicon {cursor:pointer;}
   border: 1px solid white;
   border-radius: 10px;
 }
-.pointed {cursor:pointer;}
+.pointed {cursor:pointer;margin-left:3px;margin-right:3px;}
 
 body.dragging {cursor: move !important;}
 
@@ -85,4 +84,31 @@ body.dragging {cursor: move !important;}
 }
 
 .invisible {display:none!important;}
+.sound_handle {border:2px solid white!important;padding-top:3px;}
 
+.popup_background{
+	position: fixed;
+	//background-color: rgba(0,0,0,0.5);
+	z-index: 100;
+	top:0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	float: left;
+	text-align:center;
+}
+.popup_message {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  top:50%;
+  color:white;
+  font-size:200%;
+  background-color: Crimson;
+  text-align:center;
+  float: left;
+  padding: 10px;
+  border-radius:25px;
+}
